--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Control Flow JS</title>
 </head>
 <body>
-    <h1>Hello WOrld</h1>
+    <h1>Hello Wrld</h1>
     <script src="./script.js"></script>
 </body>
 </html>
